yaml/01_basic/sm-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-frontend
  labels:
    app: sm-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-frontend
  template:
    metadata:
      labels:
        app: sm-frontend
    spec:
      containers:
      - name: sm-frontend
        image: devwikirepo/sm-frontend:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sm-frontend
  labels:
    app: sm-frontend
spec:
  selector:
    app: sm-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
