yaml/01_basic/sm-reco.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-reco
  labels:
    app: sm-reco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-reco
  template:
    metadata:
      labels:
        app: sm-reco
    spec:
      containers:
      - env:
        - name: "SUB_URL"
          value: "sm-subs"
        name: sm-reco
        image: devwikirepo/sm-reco:1.0.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sm-reco
  labels:
    app: sm-reco
spec:
  selector:
    app: sm-reco
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
