yaml/01_basic/sm-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-user
  labels:
    app: sm-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-user
  template:
    metadata:
      labels:
        app: sm-user
    spec:
      containers:
      - name: sm-user
        image: devwikirepo/sm-user:1.0.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sm-user
  labels:
    app: sm-user
spec:
  selector:
    app: sm-user
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
