yaml/01_basic/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sm.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sm-frontend
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: sm-user
            port:
              number: 80
      - path: /sub
        pathType: Prefix
        backend:
          service:
            name: sm-subs
            port:
              number: 80
      - path: /recommend
        pathType: Prefix
        backend:
          service:
            name: sm-reco
            port:
              number: 80
